--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "next": "10.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.11.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.9",
