--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
     "next": "10.0.2",
+    "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-hook-form": "^6.11.4"
+    "react-hook-form": "^6.11.4",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.9",
