--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.4",
+    "react-query": "^3.3.2",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
