--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@material-ui/icons": "^4.9.1",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.11.0",
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
     "next": "10.0.2",
