--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.4",
+    "react-masonry-css": "^1.0.14",
     "react-query": "^3.3.2",
     "tailwindcss": "^2.0.2"
   },
